<resources>
    <string name="app_name">OrderZorka</string>
    <string name="add_btn_contente_describtion">Add new Product Item</string>
    <string name="isGroup">Is Group</string>
    <string name="parent">Parent</string>
    <string name="unit">Unit</string>
    <string name="name_of_product">name_of_product</string>
    <string name="name">Name</string>
    <string name="tvGroupName">Group</string>
    <string name="tvUnitName">Unit</string>
    <string name="hintUnitName">Unit name</string>
    <string name="hintGroupName">Group name</string>
    <string name="btnSave">Save</string>
</resources>